--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-catch-links": "^2.3.5",
+    "gatsby-plugin-google-analytics": "^2.8.0",
     "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-netlify-cms": "^4.3.5",
     "gatsby-plugin-offline": "^3.2.7",
